corrected title > the navigation elements "home and page2" deleted because they are useless > corrected social media links'

--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="utf-8">
     <meta name="keywords" content="seo, google, site web, site internet, agence design paris, agence design, agence design,agence design,agence design,agence design,agence design,agence design,agence design,agence design">
-    <meta name="description" content="">
+    <meta name="description" content="l'agence La Panthère est une agence de web design qui aide les entreprises à devenir attractives et visibles sur internet.">
     <meta name="viewport" content="width=device-width, initial-scale=1.0, viewport-fit=cover">
     <link rel="shortcut icon" type="image/png" href="favicon.jpg">
     
@@ -37,25 +37,13 @@
 
 		<nav class="navbar row">
 			<div class="navbar-header">
-				<div class="keywords" style="color:#cccccc;font-size:1px;">Agence web à paris, stratégie web, web design, illustrations, design de site web, site web, web, internet, site internet, site</div>
-				<a class="navbar-brand" href="index.html"><img src="img/agence-la-panthere-monochrome.svg" alt="paris web design logo agence web meilleure agence" height="40" /></a>
-				<div class="keywords" style="color:#cccccc;font-size:1px;">Agence web à paris, stratégie web, web design, illustrations, design de site web, site web, web, internet, site internet, site</div>
+
+				<a class="navbar-brand" href="index.html"><img src="img/agence-la-panthere-monochrome.svg" alt="paris web design logo agence web meilleure agence" height="40" /></a>	
 				<button id="nav-toggle" type="button" class="ui-navbar-toggle navbar-toggle" data-toggle="collapse" data-target=".navbar-1">
 					<span class="sr-only">Toggle navigation</span><span class="icon-bar"></span><span class="icon-bar"></span><span class="icon-bar"></span>
 				</button>
 			</div>
-			<div class="collapse navbar-collapse navbar-1 special-dropdown-nav">
-				<ul class="site-navigation nav navbar-nav">
-					<li>
-						<a href="index.html">Accueil</a>
-					</li>
-					<li>
-					</li>
-					<li>
-						<a href="page2.html">page2 &gt;</a>
-					</li>
-				</ul>
-			</div>
+			 
 		</nav>
 	</div>
 </div>
@@ -226,25 +214,34 @@
 				</p>
 				<div class="row row-no-gutters social">
 					<div class="col-sm-3">
-						<div class="text-center">
-							<a class="social" href="index.html"><span class="fa fa-twitter icon-md"></span></a>
+						<div class="text-center social">
+							<a href="https://twitter.com/" target="_blank"  title=" Twitter" >
+								<span class="fa fa-twitter icon-md"></span>
+							</a>
 						</div>
 					</div>
 					<div class="col-sm-3">
-						<div class="text-center">
-							<a class="social" href="index.html"><span class="fa fa-facebook icon-md"></span></a>
+						<div class="text-center social">
+							<a href="https://www.facebook.com/" target="_blank" title=" Facebook" >
+								<span class="fa fa-facebook icon-md"></span>
+							</a>
+						</div>
+					</div>
+					<div class="col-sm-3">	
+						<div class="text-center social">
+							<a href="https://dribbble.com/" target="_blank"  title="Dribble">
+								<span class="fa fa-dribbble icon-md"></span>
+							</a>
 						</div>
 					</div>
 					<div class="col-sm-3">
-						<div class="text-center">
-							<a class="social" href="index.html"><span class="fa fa-dribbble icon-md"></span></a>
+						<div class="text-center social">
+							<a href="https://www.instagram.com/" target="_blank" rel="noopener noreferrer" title="Retrouvez-nous sur Instagram" aria-label="Retrouvez-nous sur Instagram">
+								<span class="fa fa-instagram icon-md"></span>
+							</a>
 						</div>
 					</div>
-					<div class="col-sm-3">
-						<div class="text-center">
-							<a class="social" href="index.html"><span class="fa fa-instagram icon-md"></span></a>
-						</div>
-					</div>
+				</div>
 					<div class="keywords" style="color:#F3976C;">Agence web à paris, stratégie web, web design, illustrations, design de site web, site web, web, internet, site internet, site</div>
 				</div>
 				<div class="row">
