--- a/contact.html
+++ b/contact.html
@@ -84,7 +84,7 @@
 	<div class="container bloc-lg">
 		<div class="row">
 			<div class="col-sm-6">
-				<form id="form_1" novalidate success-msg="Your message has been sent." fail-msg="Sorry it seems that our mail server is not responding, Sorry for the inconvenience!">
+				<form id="form_1" novalidate data-success-msg="Your message has been sent." data-fail-msg="Sorry it seems that our mail server is not responding, Sorry for the inconvenience!">
 					<div class="form-group">
 						<label for="name">
 							Nom
@@ -162,7 +162,7 @@
 </div>
 <!-- Footer - bloc-8 END -->
 
-</div>
+
 <!-- Principal conteneur END -->
     
 
