responsive design, image size, social network links modified

--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="fr">
 <head>
     <meta charset="utf-8">
-    <meta name="description" content="l'agence La Panthère est une agence de web design qui aide les entreprises à devenir attractives et visibles sur internet.">
+    <meta name="description" content="l'agence La Panthère est une agence  de web design à Lyon qui aide les entreprises à devenir attractives et visibles sur internet.">
     <meta name="viewport" content="width=device-width, initial-scale=1.0, viewport-fit=cover">
     <link rel="shortcut icon" type="image/png" href="favicon.png">
     
@@ -215,9 +215,6 @@
 	</div>
 </div>
 
-	
-
-
 </main>
 
 <footer>
@@ -233,22 +230,22 @@
 					<div class="row row-no-gutters social">
 						<div class="col-sm-3">
 							<div class="text-center">
-								<a class="social" href="#" aria-label="first link"><span class="fa fa-twitter icon-md"></span></a>
+								<a class="social" href="https://twitter.com" aria-label="twitter"><span class="fa fa-twitter icon-md"></span></a>
 							</div>
 						</div>
 						<div class="col-sm-3">
 							<div class="text-center">
-								<a class="social" href="#"  aria-label="second link"><span class="fa fa-facebook icon-md"></span></a>
+								<a class="social" href="https://www.facebook.com/"  aria-label="facebook"><span class="fa fa-facebook icon-md"></span></a>
 							</div>
 						</div>
 						<div class="col-sm-3">
 							<div class="text-center">
-								<a class="social" href="#" aria-label="third link"><span class="fa fa-dribbble icon-md"></span></a>
+								<a class="social" href="http://dribbble.com" aria-label="dribbbles"><span class="fa fa-dribbble icon-md"></span></a>
 							</div>
 						</div>
 						<div class="col-sm-3">
 							<div class="text-center">
-								<a class="social" href="#" aria-label="fourth link"><span class="fa fa-instagram icon-md"></span></a>
+								<a class="social" href="http://instagram.com" aria-label="instagram"><span class="fa fa-instagram icon-md"></span></a>
 							</div>
 						</div>
 						
